--- a/Playground/MySQL_RCE_Module/docker-compose.yml
+++ b/Playground/MySQL_RCE_Module/docker-compose.yml
@@ -2,6 +2,9 @@ version: '3'
 
 services:
   db:
+    build:
+      context: .
+      dockerfile: Dockerfile
     container_name: "mysql"
     image: mysql:5.7.22
     command: --default-authentication-plugin=mysql_native_password --max_allowed_packet=30M
